--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import r2_score, mean_squared_error"
    ]
   },
   {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
        "      <th>Timestamp</th>\n",
        "      <td>1253</td>\n",
        "      <td>1248</td>\n",
-       "      <td>24/11/2020 13:55:19</td>\n",
+       "      <td>24/11/2020 14:07:23</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -384,7 +385,7 @@
        "Company type                                          1228     63   \n",
        "\n",
        "                                                                        top  \\\n",
-       "Timestamp                                               24/11/2020 13:55:19   \n",
+       "Timestamp                                               24/11/2020 14:07:23   \n",
        "Age                                                                     NaN   \n",
        "Gender                                                                 Male   \n",
        "City                                                                 Berlin   \n",
@@ -484,7 +485,7 @@
        "Company type                                            NaN            NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,27 +498,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Javascript / Typescript                                                                   44\n",
-       "Python                                                                                    37\n",
-       "SQL                                                                                       31\n",
-       "AWS, Docker                                                                               16\n",
-       "Kotlin                                                                                    15\n",
-       "                                                                                          ..\n",
-       "Python, Ruby, Java / Scala, Go, Rust, AWS, Kubernetes, Docker, Terraform, helm, packer     1\n",
-       "Kotlin, SQL, AWS, Kubernetes, Docker                                                       1\n",
-       "Python, R, Go                                                                              1\n",
-       "C/C++, PHP, SQL                                                                            1\n",
-       "Python, AWS, Kubernetes, Docker, terraform, ansible                                        1\n",
-       "Name: Other technologies/programming languages you use often, Length: 562, dtype: int64"
+       "Other technologies/programming languages you use often\n",
+       "Javascript / Typescript                                                          44\n",
+       "Python                                                                           37\n",
+       "SQL                                                                              31\n",
+       "AWS, Docker                                                                      16\n",
+       "Kotlin                                                                           15\n",
+       "                                                                                 ..\n",
+       "Java / Scala, AWS, Kubernetes                                                     1\n",
+       "Java / Scala, AWS, Google Cloud, Kubernetes, Docker                               1\n",
+       "Go, Rust, Kubernetes                                                              1\n",
+       "Python, C/C++, Javascript / Typescript, Java / Scala, SQL, Kubernetes, Docker     1\n",
+       "Python, Java / Scala, R, SQL, Google Cloud                                        1\n",
+       "Name: count, Length: 562, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,9 +531,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Total years of experience</th>\n",
+       "      <th>Years of experience in Germany</th>\n",
+       "      <th>Seniority level</th>\n",
+       "      <th>Your main technology / programming language</th>\n",
+       "      <th>Other technologies/programming languages you use often</th>\n",
+       "      <th>Yearly brutto salary (without bonus and stocks) in EUR</th>\n",
+       "      <th>Yearly bonus + stocks in EUR</th>\n",
+       "      <th>Number of vacation days</th>\n",
+       "      <th>Employment status</th>\n",
+       "      <th>Сontract duration</th>\n",
+       "      <th>Main language at work</th>\n",
+       "      <th>Company size</th>\n",
+       "      <th>Company type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24/11/2020 11:14:15</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Munich</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>TypeScript</td>\n",
+       "      <td>Kotlin, Javascript / Typescript</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Full-time employee</td>\n",
+       "      <td>Unlimited contract</td>\n",
+       "      <td>English</td>\n",
+       "      <td>51-100</td>\n",
+       "      <td>Product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24/11/2020 11:14:16</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>Backend Developer</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>Ruby</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Full-time employee</td>\n",
+       "      <td>Unlimited contract</td>\n",
+       "      <td>English</td>\n",
+       "      <td>101-1000</td>\n",
+       "      <td>Product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24/11/2020 11:14:21</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Lead</td>\n",
+       "      <td>Javascript / Typescript</td>\n",
+       "      <td>Javascript / Typescript, Docker</td>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Self-employed (freelancer)</td>\n",
+       "      <td>Temporary contract</td>\n",
+       "      <td>English</td>\n",
+       "      <td>101-1000</td>\n",
+       "      <td>Product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24/11/2020 11:15:24</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>Frontend Developer</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Junior</td>\n",
+       "      <td>Javascript</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Full-time employee</td>\n",
+       "      <td>Unlimited contract</td>\n",
+       "      <td>English</td>\n",
+       "      <td>51-100</td>\n",
+       "      <td>Startup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24/11/2020 11:15:46</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>Backend Developer</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>C# .NET</td>\n",
+       "      <td>.NET, SQL, AWS, Docker</td>\n",
+       "      <td>62000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Full-time employee</td>\n",
+       "      <td>Unlimited contract</td>\n",
+       "      <td>English</td>\n",
+       "      <td>101-1000</td>\n",
+       "      <td>Product</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Timestamp   Age Gender    City           Position   \\\n",
+       "0  24/11/2020 11:14:15  26.0   Male  Munich   Software Engineer   \n",
+       "1  24/11/2020 11:14:16  26.0   Male  Berlin   Backend Developer   \n",
+       "2  24/11/2020 11:14:21  29.0   Male  Berlin   Software Engineer   \n",
+       "3  24/11/2020 11:15:24  28.0   Male  Berlin  Frontend Developer   \n",
+       "4  24/11/2020 11:15:46  37.0   Male  Berlin   Backend Developer   \n",
+       "\n",
+       "  Total years of experience Years of experience in Germany Seniority level  \\\n",
+       "0                         5                              3          Senior   \n",
+       "1                         7                              4          Senior   \n",
+       "2                        12                              6            Lead   \n",
+       "3                         4                              1          Junior   \n",
+       "4                        17                              6          Senior   \n",
+       "\n",
+       "  Your main technology / programming language  \\\n",
+       "0                                  TypeScript   \n",
+       "1                                        Ruby   \n",
+       "2                     Javascript / Typescript   \n",
+       "3                                  Javascript   \n",
+       "4                                     C# .NET   \n",
+       "\n",
+       "  Other technologies/programming languages you use often  \\\n",
+       "0                    Kotlin, Javascript / Typescript       \n",
+       "1                                                NaN       \n",
+       "2                    Javascript / Typescript, Docker       \n",
+       "3                                                NaN       \n",
+       "4                             .NET, SQL, AWS, Docker       \n",
+       "\n",
+       "   Yearly brutto salary (without bonus and stocks) in EUR  \\\n",
+       "0                                            80000.0        \n",
+       "1                                            80000.0        \n",
+       "2                                           120000.0        \n",
+       "3                                            54000.0        \n",
+       "4                                            62000.0        \n",
+       "\n",
+       "  Yearly bonus + stocks in EUR Number of vacation days  \\\n",
+       "0                         5000                      30   \n",
+       "1                          NaN                      28   \n",
+       "2                       120000                      30   \n",
+       "3                          NaN                      24   \n",
+       "4                          NaN                      29   \n",
+       "\n",
+       "            Employment status   Сontract duration Main language at work  \\\n",
+       "0          Full-time employee  Unlimited contract               English   \n",
+       "1          Full-time employee  Unlimited contract               English   \n",
+       "2  Self-employed (freelancer)  Temporary contract               English   \n",
+       "3          Full-time employee  Unlimited contract               English   \n",
+       "4          Full-time employee  Unlimited contract               English   \n",
+       "\n",
+       "  Company size Company type  \n",
+       "0       51-100      Product  \n",
+       "1     101-1000      Product  \n",
+       "2     101-1000      Product  \n",
+       "3       51-100      Startup  \n",
+       "4     101-1000      Product  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -549,14 +765,168 @@
     "\n",
     "### Hyperparameter Changes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Force columns to be numeric (errors='coerce' turns text into NaN)\n",
+    "df['Yearly brutto salary (without bonus and stocks) in EUR'] = pd.to_numeric(df['Yearly brutto salary (without bonus and stocks) in EUR'], errors='coerce')\n",
+    "df['Yearly bonus + stocks in EUR'] = pd.to_numeric(df['Yearly bonus + stocks in EUR'], errors='coerce')\n",
+    "\n",
+    "# 2. Fill missing values with 0 so the addition works\n",
+    "df['Yearly brutto salary (without bonus and stocks) in EUR'] = df['Yearly brutto salary (without bonus and stocks) in EUR'].fillna(0)\n",
+    "df['Yearly bonus + stocks in EUR'] = df['Yearly bonus + stocks in EUR'].fillna(0)\n",
+    "\n",
+    "# 3. Now try creating the target variable again\n",
+    "df['Total_Comp'] = df['Yearly brutto salary (without bonus and stocks) in EUR'] + df['Yearly bonus + stocks in EUR']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    1.253000e+03\n",
+      "mean     8.428361e+07\n",
+      "std      2.829182e+09\n",
+      "min      1.000100e+04\n",
+      "25%      6.000000e+04\n",
+      "50%      7.400000e+04\n",
+      "75%      9.100000e+04\n",
+      "max      1.000000e+11\n",
+      "Name: Total_Comp, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Total_Comp'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out extreme outliers in the target variable\n",
+    "# We keep values that are realistic for a yearly salary\n",
+    "df = df[(df['Total_Comp'] > 10000) & (df['Total_Comp'] < 500000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_small_categories(df, column, threshold=5):\n",
+    "    # Count how many times each value appears\n",
+    "    counts = df[column].value_counts()\n",
+    "    \n",
+    "    # Identify values that appear fewer than 'threshold' times\n",
+    "    to_replace = counts[counts < threshold].index\n",
+    "    \n",
+    "    # Replace them with 'Other'\n",
+    "    df[column] = df[column].replace(to_replace, 'Other')\n",
+    "    return df\n",
+    "\n",
+    "# Apply it to the 'City' and 'Your main technology' columns\n",
+    "df = combine_small_categories(df, 'City')\n",
+    "df = combine_small_categories(df, 'Your main technology / programming language')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Preprocessing\n",
+    "\n",
+    "# Define target and features\n",
+    "y = df['Total_Comp']\n",
+    "# Drop the target and the original messy text columns we replaced/don't need\n",
+    "X = df.drop(columns=['Total_Comp', 'Timestamp', 'Yearly brutto salary (without bonus and stocks) in EUR', 'Yearly bonus + stocks in EUR'])\n",
+    "\n",
+    "# Convert categorical text into numbers (One-Hot Encoding)\n",
+    "X = pd.get_dummies(X, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Initialize the suggested model\n",
+    "et = ExtraTreesRegressor(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Wrap it in a transformer that takes the log of salary before training \n",
+    "# and converts it back (exp) for the final result\n",
+    "model = TransformedTargetRegressor(regressor=et, func=np.log1p, inverse_func=np.expm1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "train_preds = model.predict(X_train)\n",
+    "test_preds = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training R2: 1.0000\n",
+      "Testing R2: 0.0547\n",
+      "Training RMSE: 29.20\n",
+      "Testing RMSE: 42946.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 1. Calculate R2 scores\n",
+    "train_r2 = r2_score(y_train, train_preds)\n",
+    "test_r2 = r2_score(y_test, test_preds)\n",
+    "\n",
+    "# 2. Calculate RMSE (Root Mean Squared Error)\n",
+    "train_rmse = np.sqrt(mean_squared_error(y_train, train_preds))\n",
+    "test_rmse = np.sqrt(mean_squared_error(y_test, test_preds))\n",
+    "\n",
+    "# 3. Print the results for your report\n",
+    "print(f\"Training R2: {train_r2:.4f}\")\n",
+    "print(f\"Testing R2: {test_r2:.4f}\")\n",
+    "print(f\"Training RMSE: {train_rmse:.2f}\")\n",
+    "print(f\"Testing RMSE: {test_rmse:.2f}\")"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4d722d3adfa415172c1f5238b519fb86b488acdae450fd691ab06c09f4ca9173"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('ml3950': conda)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -570,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
