--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -2,26 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.linear_model import SGDRegressor\n",
     "import seaborn as sns\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.linear_model import Lasso\n",
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import r2_score, mean_squared_error"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.compose import TransformedTargetRegressor"
    ]
   },
   {
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +478,7 @@
        "Company type                                            NaN            NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,12 +486,13 @@
    "source": [
     "#Load Data\n",
     "df = pd.read_csv(\"data/Euro_Salary.csv\")\n",
+    "df.columns = df.columns.str.strip() # Remove any hidden spaces in column names\n",
     "df.describe(include=\"all\").T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +513,7 @@
        "Name: count, Length: 562, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +680,7 @@
        "</div>"
       ],
       "text/plain": [
-       "             Timestamp   Age Gender    City           Position   \\\n",
+       "             Timestamp   Age Gender    City            Position  \\\n",
        "0  24/11/2020 11:14:15  26.0   Male  Munich   Software Engineer   \n",
        "1  24/11/2020 11:14:16  26.0   Male  Berlin   Backend Developer   \n",
        "2  24/11/2020 11:14:21  29.0   Male  Berlin   Software Engineer   \n",
@@ -743,7 +737,7 @@
        "4     101-1000      Product  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,37 +750,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Answers and Explainations\n",
-    "(Expand/modify as needed)\n",
-    "\n",
-    "### Results\n",
-    "\n",
-    "### Feature Selection Activities\n",
-    "\n",
-    "### Hyperparameter Changes"
+    "Target Variable Construction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Force columns to be numeric (errors='coerce' turns text into NaN)\n",
-    "df['Yearly brutto salary (without bonus and stocks) in EUR'] = pd.to_numeric(df['Yearly brutto salary (without bonus and stocks) in EUR'], errors='coerce')\n",
-    "df['Yearly bonus + stocks in EUR'] = pd.to_numeric(df['Yearly bonus + stocks in EUR'], errors='coerce')\n",
+    "# 1. Force columns to be numeric\n",
+    "df['Yearly brutto salary (without bonus and stocks) in EUR'] = pd.to_numeric(\n",
+    "    df['Yearly brutto salary (without bonus and stocks) in EUR'], errors='coerce'\n",
+    ")\n",
+    "df['Yearly bonus + stocks in EUR'] = pd.to_numeric(\n",
+    "    df['Yearly bonus + stocks in EUR'], errors='coerce'\n",
+    ")\n",
     "\n",
     "# 2. Fill missing values with 0 so the addition works\n",
     "df['Yearly brutto salary (without bonus and stocks) in EUR'] = df['Yearly brutto salary (without bonus and stocks) in EUR'].fillna(0)\n",
     "df['Yearly bonus + stocks in EUR'] = df['Yearly bonus + stocks in EUR'].fillna(0)\n",
     "\n",
-    "# 3. Now try creating the target variable again\n",
-    "df['Total_Comp'] = df['Yearly brutto salary (without bonus and stocks) in EUR'] + df['Yearly bonus + stocks in EUR']"
+    "# 3. Create the target variable\n",
+    "df['Total_Comp'] = df['Yearly brutto salary (without bonus and stocks) in EUR'] + df['Yearly bonus + stocks in EUR']\n",
+    "\n",
+    "# 4. Filter out any 0s if they don't make sense for a salary (Optional EDA step)\n",
+    "df = df[df['Total_Comp'] > 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +805,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Selection Step 1: Drop component columns to prevent target leakage\n",
+    "df_model = df.drop(['Yearly brutto salary (without bonus and stocks) in EUR', \n",
+    "                    'Yearly bonus + stocks in EUR'], axis=1)\n",
+    "\n",
+    "# Feature Selection Step 2: Handle high-cardinality categories (e.g., City)\n",
+    "# Grouping categories with fewer than 5 entries into 'Other'\n",
+    "for col in ['City', 'Main technology']:\n",
+    "    if col in df_model.columns:\n",
+    "        counts = df_model[col].value_counts()\n",
+    "        rare_values = counts[counts < 5].index\n",
+    "        df_model[col] = df_model[col].replace(rare_values, 'Other')\n",
+    "\n",
+    "# Simple Imputation for other columns\n",
+    "df_model = df_model.fillna(\"Unknown\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +877,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test R2 Score: 0.026687156407629864\n",
+      "Test RMSE: 76051.98627010427\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split features and target\n",
+    "X = df_model.drop('Total_Comp', axis=1)\n",
+    "y = df_model['Total_Comp']\n",
+    "\n",
+    "# Convert categories to dummies\n",
+    "X = pd.get_dummies(X, drop_first=True)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Implementation of the Research Challenge (Log Transform)\n",
+    "# Using ExtraTreesRegressor as suggested in your prompt\n",
+    "base_model = ExtraTreesRegressor(n_estimators=100, random_state=42)\n",
+    "\n",
+    "model = TransformedTargetRegressor(\n",
+    "    regressor=base_model, \n",
+    "    func=np.log1p, \n",
+    "    inverse_func=np.expm1\n",
+    ")\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluation\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(f\"Test R2 Score: {r2_score(y_test, y_pred)}\")\n",
+    "print(f\"Test RMSE: {np.sqrt(mean_squared_error(y_test, y_pred))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -900,9 +958,9 @@
      "output_type": "stream",
      "text": [
       "Training R2: 1.0000\n",
-      "Testing R2: 0.0547\n",
-      "Training RMSE: 29.20\n",
-      "Testing RMSE: 42946.60\n"
+      "Testing R2: 0.0267\n",
+      "Training RMSE: 0.00\n",
+      "Testing RMSE: 76051.99\n"
      ]
     }
    ],
