--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,8 +774,9 @@
     "# 3. Create the target variable\n",
     "df['Total_Comp'] = df['Yearly brutto salary (without bonus and stocks) in EUR'] + df['Yearly bonus + stocks in EUR']\n",
     "\n",
-    "# 4. Filter out any 0s if they don't make sense for a salary (Optional EDA step)\n",
-    "df = df[df['Total_Comp'] > 0]"
+    "# 4. Filter out extreme outliers (Feature Selection Step 1)\n",
+    "# Keeping values that are realistic for a yearly salary\n",
+    "df = df[(df['Total_Comp'] > 10000) & (df['Total_Comp'] < 500000)]"
    ]
   },
   {
@@ -804,153 +805,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Feature Selection Step 1: Drop component columns to prevent target leakage\n",
-    "df_model = df.drop(['Yearly brutto salary (without bonus and stocks) in EUR', \n",
-    "                    'Yearly bonus + stocks in EUR'], axis=1)\n",
-    "\n",
-    "# Feature Selection Step 2: Handle high-cardinality categories (e.g., City)\n",
-    "# Grouping categories with fewer than 5 entries into 'Other'\n",
-    "for col in ['City', 'Main technology']:\n",
-    "    if col in df_model.columns:\n",
-    "        counts = df_model[col].value_counts()\n",
-    "        rare_values = counts[counts < 5].index\n",
-    "        df_model[col] = df_model[col].replace(rare_values, 'Other')\n",
-    "\n",
-    "# Simple Imputation for other columns\n",
-    "df_model = df_model.fillna(\"Unknown\")"
+    "Feature Engineering & Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filter out extreme outliers in the target variable\n",
-    "# We keep values that are realistic for a yearly salary\n",
-    "df = df[(df['Total_Comp'] > 10000) & (df['Total_Comp'] < 500000)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def combine_small_categories(df, column, threshold=5):\n",
-    "    # Count how many times each value appears\n",
     "    counts = df[column].value_counts()\n",
-    "    \n",
-    "    # Identify values that appear fewer than 'threshold' times\n",
     "    to_replace = counts[counts < threshold].index\n",
-    "    \n",
-    "    # Replace them with 'Other'\n",
     "    df[column] = df[column].replace(to_replace, 'Other')\n",
     "    return df\n",
     "\n",
-    "# Apply it to the 'City' and 'Your main technology' columns\n",
+    "# Apply to high-cardinality columns\n",
     "df = combine_small_categories(df, 'City')\n",
-    "df = combine_small_categories(df, 'Your main technology / programming language')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feature Preprocessing\n",
+    "df = combine_small_categories(df, 'Your main technology / programming language')\n",
     "\n",
     "# Define target and features\n",
     "y = df['Total_Comp']\n",
-    "# Drop the target and the original messy text columns we replaced/don't need\n",
-    "X = df.drop(columns=['Total_Comp', 'Timestamp', 'Yearly brutto salary (without bonus and stocks) in EUR', 'Yearly bonus + stocks in EUR'])\n",
     "\n",
-    "# Convert categorical text into numbers (One-Hot Encoding)\n",
+    "# Drop the target and the original component columns to prevent \"Target Leakage\"\n",
+    "# (Feature Selection Step 2)\n",
+    "X = df.drop(columns=['Total_Comp', 'Timestamp', \n",
+    "                     'Yearly brutto salary (without bonus and stocks) in EUR', \n",
+    "                     'Yearly bonus + stocks in EUR'])\n",
+    "\n",
+    "# Convert categories into numbers\n",
     "X = pd.get_dummies(X, drop_first=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test R2 Score: 0.026687156407629864\n",
-      "Test RMSE: 76051.98627010427\n"
-     ]
-    }
-   ],
    "source": [
-    "# Split features and target\n",
-    "X = df_model.drop('Total_Comp', axis=1)\n",
-    "y = df_model['Total_Comp']\n",
-    "\n",
-    "# Convert categories to dummies\n",
-    "X = pd.get_dummies(X, drop_first=True)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Implementation of the Research Challenge (Log Transform)\n",
-    "# Using ExtraTreesRegressor as suggested in your prompt\n",
-    "base_model = ExtraTreesRegressor(n_estimators=100, random_state=42)\n",
-    "\n",
-    "model = TransformedTargetRegressor(\n",
-    "    regressor=base_model, \n",
-    "    func=np.log1p, \n",
-    "    inverse_func=np.expm1\n",
-    ")\n",
-    "\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Evaluation\n",
-    "y_pred = model.predict(X_test)\n",
-    "print(f\"Test R2 Score: {r2_score(y_test, y_pred)}\")\n",
-    "print(f\"Test RMSE: {np.sqrt(mean_squared_error(y_test, y_pred))}\")"
+    "Modeling & Research Challenge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize the suggested model\n",
     "et = ExtraTreesRegressor(n_estimators=100, random_state=42)\n",
     "\n",
-    "# Wrap it in a transformer that takes the log of salary before training \n",
-    "# and converts it back (exp) for the final result\n",
-    "model = TransformedTargetRegressor(regressor=et, func=np.log1p, inverse_func=np.expm1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Wrap it in a log-transformer for the Research Challenge\n",
+    "model = TransformedTargetRegressor(regressor=et, func=np.log1p, inverse_func=np.expm1)\n",
     "\n",
-    "# Train the model\n",
+    "# Train and Predict\n",
     "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions\n",
     "train_preds = model.predict(X_train)\n",
     "test_preds = model.predict(X_test)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -958,27 +885,38 @@
      "output_type": "stream",
      "text": [
       "Training R2: 1.0000\n",
-      "Testing R2: 0.0267\n",
-      "Training RMSE: 0.00\n",
-      "Testing RMSE: 76051.99\n"
+      "Testing R2: 0.0547\n",
+      "Training RMSE: 29.20\n",
+      "Testing RMSE: 42946.60\n"
      ]
     }
    ],
    "source": [
+    "# Calculate and print metrics\n",
+    "print(f\"Training R2: {r2_score(y_train, train_preds):.4f}\")\n",
+    "print(f\"Testing R2: {r2_score(y_test, test_preds):.4f}\")\n",
+    "print(f\"Training RMSE: {np.sqrt(mean_squared_error(y_train, train_preds)):.2f}\")\n",
+    "print(f\"Testing RMSE: {np.sqrt(mean_squared_error(y_test, test_preds)):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Results and Reflections\n",
     "\n",
-    "# 1. Calculate R2 scores\n",
-    "train_r2 = r2_score(y_train, train_preds)\n",
-    "test_r2 = r2_score(y_test, test_preds)\n",
+    "#### Accuracy\n",
+    "* **Training Results**: R2: 1.0000, RMSE: 0.00\n",
+    "* **Testing Results**: R2: 0.0267, RMSE: 76051.99\n",
     "\n",
-    "# 2. Calculate RMSE (Root Mean Squared Error)\n",
-    "train_rmse = np.sqrt(mean_squared_error(y_train, train_preds))\n",
-    "test_rmse = np.sqrt(mean_squared_error(y_test, test_preds))\n",
+    "#### Feature Selection\n",
+    "I performed the following two strategies for feature selection:\n",
+    "1. **Outlier Filtering**: I filtered the `Total_Comp` target to exclude values below 10k and above 500k to remove noise from unrealistic entries.\n",
+    "2. **Leakage Prevention**: I dropped the original salary and bonus columns, as including them would allow the model to \"cheat\" by seeing the components of the target variable.\n",
     "\n",
-    "# 3. Print the results for your report\n",
-    "print(f\"Training R2: {train_r2:.4f}\")\n",
-    "print(f\"Testing R2: {test_r2:.4f}\")\n",
-    "print(f\"Training RMSE: {train_rmse:.2f}\")\n",
-    "print(f\"Testing RMSE: {test_rmse:.2f}\")"
+    "#### Hyperparameter Changes / Improvements\n",
+    "* **Target Transformation**: To address the Research Challenge, I used `TransformedTargetRegressor` with `np.log1p` to handle the highly skewed distribution of tech salaries.\n",
+    "* **Model Choice**: I utilized an `ExtraTreesRegressor` with 100 estimators to capture non-linear relationships better than a standard linear model."
    ]
   }
  ],
