--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -750,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Target Variable Construction"
+    "### Target Variable Construction"
    ]
   },
   {
@@ -808,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature Engineering & Cleaning"
+    "### Feature Engineering & Cleaning"
    ]
   },
   {
@@ -844,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modeling & Research Challenge"
+    "### Modeling & Research Challenge"
    ]
   },
   {
@@ -872,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluation Results"
+    "### Evaluation Results"
    ]
   },
   {
