--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "Company type                                            NaN            NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "Name: count, Length: 562, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "4     101-1000      Product  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,21 +781,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count    1.253000e+03\n",
-      "mean     8.428361e+07\n",
-      "std      2.829182e+09\n",
-      "min      1.000100e+04\n",
-      "25%      6.000000e+04\n",
-      "50%      7.400000e+04\n",
-      "75%      9.100000e+04\n",
-      "max      1.000000e+11\n",
+      "count      1248.000000\n",
+      "mean      83717.752869\n",
+      "std       42329.673843\n",
+      "min       10001.000000\n",
+      "25%       60000.000000\n",
+      "50%       73450.000000\n",
+      "75%       91000.000000\n",
+      "max      400000.000000\n",
       "Name: Total_Comp, dtype: float64\n"
      ]
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -906,17 +906,23 @@
     "### Final Results and Reflections\n",
     "\n",
     "#### Accuracy\n",
-    "* **Training Results**: R2: 1.0000, RMSE: 0.00\n",
-    "* **Testing Results**: R2: 0.0267, RMSE: 76051.99\n",
+    "* Training Results**: R2: 1.0000, RMSE: 29.20\n",
+    "* Testing Results**: R2: 0.0547, RMSE: 42946.60\n",
+    "\n",
+    "This model shows overfitting. The near-perfect training score compared to the low testing score indicates the model is memorizing the traning data rather than finding general patterns. Because the tech salaries are so varied, the model struggled to generalize those rules to the test set.\n",
+    "\n",
+    "\n",
     "\n",
     "#### Feature Selection\n",
     "I performed the following two strategies for feature selection:\n",
-    "1. **Outlier Filtering**: I filtered the `Total_Comp` target to exclude values below 10k and above 500k to remove noise from unrealistic entries.\n",
-    "2. **Leakage Prevention**: I dropped the original salary and bonus columns, as including them would allow the model to \"cheat\" by seeing the components of the target variable.\n",
+    "1. **Target Leakage Prevention**: I Identified and dropped the original salary and bonus columns. Including these would allow the model to 'cheat' since they are the direct components used to calculate the target variable.\n",
+    "\n",
+    "2. **Category Thresholding**: I grouped categories in the 'City' and 'Main technology' columns that appeared fewer than 5 times into an 'Other' category. This prevented the model from overfitting to rare, non-representative data points and reduced the noise created by high-cardinality features.\n",
     "\n",
     "#### Hyperparameter Changes / Improvements\n",
-    "* **Target Transformation**: To address the Research Challenge, I used `TransformedTargetRegressor` with `np.log1p` to handle the highly skewed distribution of tech salaries.\n",
-    "* **Model Choice**: I utilized an `ExtraTreesRegressor` with 100 estimators to capture non-linear relationships better than a standard linear model."
+    "1. **Research Challenge**: I utilized the TransformedTargetRegressor with a log transformation (np.log1p). This was necessary because salary data is heavily right-skewed, and transforming the target helps the model handle extreme ranges more effectively.\n",
+    "\n",
+    "2. **Model Choice**: I used the ExtraTreesRegressor with 100 estimators as suggested. This ensemble method is better suited for capturing non-linear relationships in complex survey data than a standard linear regression. "
    ]
   }
  ],
